drag&drop box update

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "office-ui-fabric-react": "^2.21.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-dropzone": "^3.13.1",
+    "react-file-drag-and-drop": "^0.1.6",
     "react-redux": "4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4"
